# level114-subnet

./: .gitignore  README.md  __init__.py  config.env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_miner.sh  setup.py
docs/: running_validator.md  scoring.md
level114/: __init__.py
level114/api/: __init__.py  _collector_center_base.py  _collector_center_metrics.py  _collector_center_reports.py  _collector_center_servers.py  _collector_center_validators.py  collector_center_api.py
level114/base/: miner.py  neuron.py  validator.py
level114/base/utils/: weight_utils.py
level114/protocol/: __init__.py  collector.py  metrics.py
level114/types/: __init__.py  server_report.py  validator_server.py
level114/utils/: __init__.py  config.py  misc.py  uids.py
level114/validator/: __init__.py  forward.py  integration.py  runner.py  storage.py  weights.py
level114/validator/mechanisms/: __init__.py  base.py
level114/validator/mechanisms/minecraft/: __init__.py  _scanner_controller.py  _scanner_logger.py  _scanner_runner.py  _voting_client.py  constants.py  mappings.py  mechanism.py  report_models.py  report_schema.py  scorer.py  scorer_components.py  scoring.py  server_scanner.py  types.py
level114/validator/mechanisms/tcl/: __init__.py  mechanism.py  scoring.py  (+1 more)
level114/validator/scoring/: __init__.py  constants.py  integrity.py  report_schema.py  scorer.py
neurons/: __init__.py  miner.py  validator.py
scripts/: example_usage.md  miner_action.sh  register_miner.sh  run_miner.sh  run_validator.sh  score_preview.py  unregister_miner.sh
